# CudaMiner

./: .gitignore  COPYING  INSTALL  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README  README.md  README.txt  aclocal.m4  autogen.sh  autotools.sh  blake.c  blake.cu  blake.h  blakecoin.cpp  compat.h  config.status  configure  configure.ac  configure.sh  cpu-miner.c  cpuminer-config.h  cpuminer-config.h.in  cuda-miner.cpp  cudaminer-config.h  cudaminer-config.h.in  cudaminer.sln  cudaminer.vcxproj  cudaminer.vcxproj.filters  elist.h  fermi_kernel.cu  fermi_kernel.h  keccak.cpp  keccak.cu  keccak.h  kepler_kernel.cu  kepler_kernel.h  legacy_kernel.cu  (+30 more)
code/: scrypt-jane-chacha.h  scrypt-jane-hash.h  scrypt-jane-pbkdf2.h  scrypt-jane-portable-x86.h  scrypt-jane-romix-template.h  scrypt-jane-romix.h  scrypt-jane-test-vectors.h
compat/: Makefile  Makefile.am  Makefile.in  gettimeofday.c  inttypes.h  stdbool.h  unistd.h
compat/getopt/: getopt_long.c
compat/jansson/: Makefile  Makefile.am  Makefile.in  config.h  dump.c  hashtable.c  hashtable.h  jansson.h  jansson_private.h  load.c  strbuffer.c  strbuffer.h  utf.c  utf.h  util.h  value.c
compat/sys/: time.h
